add medalsData route
